# pareto-3d-splat

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
configs/: baseline.yaml  drums.yaml  importance_ablation_lego.yaml  input_sensitivity_lego.yaml  pose_sensitivity_lego.yaml  pruning_lego.yaml
data/: README.md
docs/: article.md  baseline_results.md  blog_post.md  claims_and_evidence.md  dataset_notes.md  demo.md  drums_baseline_results.md  drums_dataset.md  experiment_workflow.md  importance_ablation.md  input_sensitivity.md  interview_guide.md  limitations.md  pareto.md  pipeline.md  portfolio_assets.md  portfolio_summary.md  pose_sensitivity.md  project_plan.md  pruning.md  pruning_study.md  reproducibility.md  resume_bullets.md  roadmap.md  setup.md  technical_report.md  visibility_importance.md
results/: README.md
scripts/: baseline.env  bootstrap_baseline.sh  build_demo.py  build_portfolio_assets.py  check_environment.py  create_comparison_video.sh  dataset.env  download_drums_dataset.sh  download_lego_dataset.sh  evaluate_baseline.py  evaluate_baseline.sh  install_baseline.sh  profile_baseline.py  profile_baseline.sh  prune_gaussians.py  render_baseline.sh  run_experiment.py  run_graphdeco.py  run_input_sensitivity.py  run_pose_sensitivity.py  run_pruning_study.py  train_baseline.sh  validate_nerf_synthetic.py
tests/: test_demo.py  test_experiment_workflow.py  test_graphdeco_compat.py  test_input_degradation.py  test_input_sensitivity.py  test_nerf_synthetic_dataset.py  test_pareto.py  test_portfolio.py  test_pose_sensitivity.py  (+5 more)
(+19 files in other folders)
